# cow-mcp

./: .gitignore  README.md  main.py  pyproject.toml
constants/: constants.py  errordesc.py
mcpconfig/: config.py
mcptypes/: assessment_config_tool_types.py  assessment_run_tool_types.py  assets_tools_type.py  dashboard_tools_type.py  error_type.py  exception.py  graph_tool_types.py  rule_type.py  workflow_tools_type.py
prompts/assistant/: assessment_knowledge.md  assistant.py
prompts/insights/: insights.py
prompts/rule/: rule.md  rule.py
prompts/workflow/: workflow.py
resources/graphdb/: graphdb.py
tools/: mcpconfig.py
tools/assessments/config/: config.py
tools/assessments/run/: run.py
tools/assets/: assets.py
tools/assistant/: assistant.py
tools/dashboard/: dashboard.py
tools/general/: general.py
tools/graphdb/: graphdb.py
tools/help/: help.py
tools/rules/: rules.py
tools/workflow/: workflow.py
user-intent/: cowmcpservice.py
user-intent/tools/assessments/config/: config.py
user-intent/utils/: utils.py
utils/: auth.py  debug.py  rule.py  utils.py  wsutils.py
