[project]
name = "cowmcpservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "utils*", "mcpconfig*", "constants*", "resources*"]

