[project]
name = "cowmcpservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "aiohttp==3.12.14",
    "pandas==2.3.1",
    "PyYAML==6.0.2",
    "toml>=0.10.2",
    "ruamel.yaml==0.18.14",
    "requests==2.32.4",
    "django==5.2.4"
]
[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "utils*", "mcpconfig*", "constants*", "resources*"]

